--- a/sass/themes/default.sass
+++ b/sass/themes/default.sass
@@ -1,7 +1,7 @@
 \:root
   // Initial variables
   --black: #{$black}
-  --black-70: rgba(#000, 0.7)
+  --black-70: rgba(0, 0, 0, 0.7)
   --black-bis: #{$black-bis}
   --black-ter: #{$black-ter}
   --grey-darker: #{$grey-darker}
@@ -75,11 +75,16 @@
   --danger-light: #{$danger-light}
   --danger-dark: #{$danger-dark}
   --light-invert: #{$light-invert}
+  --light-light: #{$light-light}
+  --light-dark: #{$light-dark}
   --dark-invert: #{$dark-invert}
+  --dark-light: #{$dark-light}
+  --dark-dark: #{$dark-dark}
   --scheme-main: #{$scheme-main}
   --scheme-main-bis: #{$scheme-main-bis}
   --scheme-main-ter: #{$scheme-main-ter}
   --scheme-invert: #{$scheme-invert}
+  --scheme-invert-rgb: #{$scheme-invert-rgb}
   --scheme-invert-bis: #{$scheme-invert-bis}
   --scheme-invert-ter: #{$scheme-invert-ter}
   --background: #{$background}
