--- a/sass/utilities/derived-variables.scss
+++ b/sass/utilities/derived-variables.scss
@@ -22,20 +22,24 @@ $red-invert      : findColorInvert($red) !default;
 $primary-invert  : findColorInvert($primary, $turquoise) !default;
 $primary-light   : findLightColor($primary, $turquoise) !default;
 $primary-dark    : findDarkColor($primary, $turquoise) !default;
-$info-invert     : findColorInvert($info) !default;
-$info-light      : findLightColor($info) !default;
-$info-dark       : findDarkColor($info) !default;
+$info-invert     : findColorInvert($info, $cyan) !default;
+$info-light      : findLightColor($info, $cyan) !default;
+$info-dark       : findDarkColor($info, $cyan) !default;
 $success-invert  : findColorInvert($success, $green) !default;
 $success-light   : findLightColor($success, $green) !default;
 $success-dark    : findDarkColor($success, $green) !default;
-$warning-invert  : findColorInvert($warning) !default;
-$warning-light   : findLightColor($warning) !default;
-$warning-dark    : findDarkColor($warning) !default;
-$danger-invert   : findColorInvert($danger) !default;
-$danger-light    : findLightColor($danger) !default;
-$danger-dark     : findDarkColor($danger) !default;
-$light-invert    : findColorInvert($light) !default;
-$dark-invert     : findColorInvert($dark) !default;
+$warning-invert  : findColorInvert($warning, $yellow) !default;
+$warning-light   : findLightColor($warning, $yellow) !default;
+$warning-dark    : findDarkColor($warning, $yellow) !default;
+$danger-invert   : findColorInvert($danger, $red) !default;
+$danger-light    : findLightColor($danger, $red) !default;
+$danger-dark     : findDarkColor($danger, $red) !default;
+$light-invert    : findColorInvert($light, $white-ter) !default;
+$light-light     : findLightColor($light, $white-ter) !default;
+$light-dark      : findDarkColor($light, $white-ter) !default;
+$dark-invert     : findColorInvert($dark, $grey-darker) !default;
+$dark-light      : findLightColor($dark, $grey-darker) !default;
+$dark-dark       : findDarkColor($dark, $grey-darker) !default;
 
 // General colors
 
@@ -43,6 +47,7 @@ $scheme-main       : var(--white, #{$white}) !default;
 $scheme-main-bis   : var(--white-bis, #{$white-bis}) !default;
 $scheme-main-ter   : var(--white-ter, #{$white-ter}) !default;
 $scheme-invert     : var(--black, #{$black}) !default;
+$scheme-invert-rgb : bulmaToRGB($black) !default;
 $scheme-invert-bis : var(--black-bis, #{$black-bis}) !default;
 $scheme-invert-ter : var(--black-ter, #{$black-ter}) !default;
 
@@ -56,7 +61,7 @@ $border-light-hover: var(--grey-light, #{$grey-light}) !default;
 // Text colors
 
 $text       : var(--grey-dark, #{$grey-dark}) !default;
-$text-invert: findColorInvert($text) !default;
+$text-invert: findColorInvert($text, $grey-dark) !default;
 $text-light : var(--grey, #{$grey}) !default;
 $text-strong: var(--grey-darker, #{$grey-darker}) !default;
 
@@ -71,9 +76,10 @@ $pre-background : var(--background, #{$background}) !default;
 // Link colors
 
 $link              : var(--blue, #{$blue}) !default;
-$link-invert       : findColorInvert($link) !default;
-$link-light        : findLightColor($link) !default;
-$link-dark         : findDarkColor($link) !default;
+$link-rgb          : bulmaToRGB($blue) !default;
+$link-invert       : findColorInvert($link, $blue) !default;
+$link-light        : findLightColor($link, $blue) !default;
+$link-dark         : findDarkColor($link, $blue) !default;
 $link-visited      : var(--purple, #{$purple}) !default;
 
 $link-hover        : var(--grey-darker, #{$grey-darker}) !default;
