--- a/sass/elements/image.sass
+++ b/sass/elements/image.sass
@@ -8,7 +8,7 @@ $dimensions: 16 24 32 48 64 96 128 !default
     height: auto
     width: 100%
     &.is-rounded
-      border-radius: $radius-rounded
+      border-radius: var(--radius-rounded, #{$radius-rounded})
   &.is-fullwidth
     width: 100%
   // Ratio
