--- a/sass/elements/icon.sass
+++ b/sass/elements/icon.sass
@@ -4,18 +4,21 @@ $icon-dimensions-medium: 2rem !default
 $icon-dimensions-large: 3rem !default
 
 .icon
+  --icon-dimensions: #{$icon-dimensions}
+  --icon-dimensions-small: #{$icon-dimensions-small}
+  --icon-dimensions-medium: #{$icon-dimensions-medium}
+  --icon-dimensions-large: #{$icon-dimensions-large}
+
   align-items: center
   display: inline-flex
   justify-content: center
-  height: $icon-dimensions
-  width: $icon-dimensions
+  height: var(--icon-dimensions)
+  width: var(--icon-dimensions)
+
   // Sizes
   &.is-small
-    height: $icon-dimensions-small
-    width: $icon-dimensions-small
+    --icon-dimensions: var(--icon-dimensions-small)
   &.is-medium
-    height: $icon-dimensions-medium
-    width: $icon-dimensions-medium
+    --icon-dimensions: var(--icon-dimensions-medium)
   &.is-large
-    height: $icon-dimensions-large
-    width: $icon-dimensions-large
+    --icon-dimensions: var(--icon-dimensions-large)
