Be sure to add !important

--- a/sass/helpers/other.sass
+++ b/sass/helpers/other.sass
@@ -5,7 +5,7 @@
   box-shadow: none !important
 
 .is-clickable
-  cursor: pointer
+  cursor: pointer !important
 
 .is-unselectable
   @extend %unselectable
