Rename to flexbox and used full attribute names

--- a/sass/helpers/_all.sass
+++ b/sass/helpers/_all.sass
@@ -1,7 +1,7 @@
 @charset "utf-8"
 
 @import "color.sass"
-@import "flex.sass"
+@import "flexbox.sass"
 @import "float.sass"
 @import "other.sass"
 @import "overflow.sass"
